fix: hight contrast mode

--- a/src/components/sbb-expansion-panel-header/sbb-expansion-panel-header.scss
+++ b/src/components/sbb-expansion-panel-header/sbb-expansion-panel-header.scss
@@ -10,6 +10,10 @@
   --sbb-expansion-panel-header-gap: var(--sbb-spacing-fixed-6x);
   --sbb-expansion-panel-header-padding-block: var(--sbb-spacing-responsive-xs);
   --sbb-expansion-panel-header-padding-inline: var(--sbb-spacing-fixed-6x);
+
+  @include sbb.if-forced-colors {
+    --sbb-expansion-panel-header-text-color: ButtonText;
+  }
 }
 
 :host([disabled]:not([disabled='false'])) {
